# fgame

./: .gitmodules  README.md  meson.build
include/fgame/: component.hh  entity.hh  event.hh  game.hh  game_render.hh  game_update.hh  math.hh  thread_safe.hh  util.hh
src/: event.cc  game.cc  game_render.cc  game_update.cc  main.cc  thread_safe.cc
src/ecs/: component.cc  entity.cc
